<resources>
    <string name="app_name">Invoice Total DJ</string>
    <string name="subtotal">Subtotal</string>
    <string name="total">Total</string>
    <string name="percent">Discount Percent</string>
    <string name="amount">Discount Amount</string>
    <string name="initial_percent">0%</string>
    <string name="initial_amount">€0.00</string>
    <string name="subtotal_editText">Enter subtotal here..</string>
</resources>